Update button classes

--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="add-double-bottom-margin">
-      <input type="submit" class="button" value="Save" />
+      <input type="submit" class="govuk-button" value="Save" />
     </div>
 
     <a href="/about-your-organisation">Cancel changes</a>
