--- a/app/views/accept-terms.html
+++ b/app/views/accept-terms.html
@@ -42,7 +42,7 @@
 
           {{ macros.checkboxGroup('terms-and-conditions', fields, [ { id: 'terms-and-conditions', title: 'Please agree to the terms and conditions before continuing' }]) }}
 
-          <input type="submit" class="button" value="Continue">
+          <input type="submit" class="govuk-button" value="Continue">
         </fieldset>
       </form>
     </div>
