--- a/app/views/begin-research.html
+++ b/app/views/begin-research.html
@@ -23,7 +23,7 @@
 
       <p>Any changes made using this prototype are temporary and will be deleted after the research ends.</p>
 
-      <a href="/" class="button">Start research</a>
+      <a href="/" class="govuk-button">Start research</a>
     </div>
 </div>
 </main>
