--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -80,7 +80,7 @@
         {% endif %}
 
         <div class="add-top-margin add-double-bottom-margin">
-          <input type="submit" class="button" value="Save" />
+          <input type="submit" class="govuk-button" value="Save" />
         </div>
 
         <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
