--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -32,7 +32,7 @@
         {{ macros.textarea(course.programmeCode + '-other-requirements', 'Other requirements (optional)', 8, null, 100) }}
 
         <div class="add-double-bottom-margin">
-          <input type="submit" class="button" value="Save" />
+          <input type="submit" class="govuk-button" value="Save" />
         </div>
 
         <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
