--- a/app/views/course/school-placements.html
+++ b/app/views/course/school-placements.html
@@ -22,7 +22,7 @@
         {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-placements', 'School placements', 10) }}
 
         <div class="add-double-bottom-margin">
-          <input type="submit" class="button" value="Save" />
+          <input type="submit" class="govuk-button" value="Save" />
         </div>
 
         <a href="/course/{{ subject.slug }}">Cancel changes</a>
