--- a/app/views/course/vacancies-full-part.html
+++ b/app/views/course/vacancies-full-part.html
@@ -37,7 +37,7 @@
         <p>Changes are immediate.</p>
 
         <div class="add-double-bottom-margin">
-          <input type="submit" class="button" value="Update vacancies" />
+          <input type="submit" class="govuk-button" value="Update vacancies" />
         </div>
 
         <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
