--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -101,7 +101,7 @@
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>New information will show on all Bracknell Forest Partnership courses.</p>
     <p>
-      <a href="#" class="button">Publish</a>
+      <a href="#" class="govuk-button">Publish</a>
     </p>
 
 
@@ -134,7 +134,7 @@
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>New information will show on all Bracknell Forest Partnership courses.</p>
     <p>
-      <a href="#" class="button">Publish</a>
+      <a href="#" class="govuk-button">Publish</a>
     </p>
 
 
@@ -188,7 +188,7 @@
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>New information will show on all Bracknell Forest Partnership courses.</p>
     <p>
-      <a href="#" class="button">Publish</a>
+      <a href="#" class="govuk-button">Publish</a>
     </p>
 
 
@@ -268,7 +268,7 @@
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
-    <a href="#" class="button">Publish</a>
+    <a href="#" class="govuk-button">Publish</a>
 
 
   <hr class="govuk-section-break govuk-section-break--visible" />
@@ -300,7 +300,7 @@
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
-    <a href="#" class="button">Publish</a>
+    <a href="#" class="govuk-button">Publish</a>
 
 
   <hr class="govuk-section-break govuk-section-break--visible" />
@@ -355,7 +355,7 @@
 
     <h3 class="govuk-heading-m remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
-    <a href="#" class="button">Publish</a>
+    <a href="#" class="govuk-button">Publish</a>
 
 
   <hr class="govuk-section-break govuk-section-break--visible" />
