--- a/app/views/location.html
+++ b/app/views/location.html
@@ -161,7 +161,7 @@
       <hr class="govuk-section-break govuk-section-break--visible" />
 
 
-      <input type="submit" class="button" value="Save" />
+      <input type="submit" class="govuk-button" value="Save" />
     </div>
   </form>
 </main>
