--- a/app/views/new/applications-open.html
+++ b/app/views/new/applications-open.html
@@ -15,7 +15,7 @@
     {{ macros.datefields('applications-open', 'Applications open') }}
 
     <div class="form-group">
-      <input type="submit" class="button" value="Continue" />
+      <input type="submit" class="govuk-button" value="Continue" />
     </div>
   </form>
 </main>
