--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -52,7 +52,7 @@
           }
         ], errors) }}
 
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
