--- a/app/views/new/funding.html
+++ b/app/views/new/funding.html
@@ -29,7 +29,7 @@
 
         {{ macros.radioGroup(code + '-new-type', fields, 0, false) }}
 
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
