--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -38,7 +38,7 @@
 
         {{ macros.radioGroup(code + '-new-outcome', fields, errors) }}
 
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
