--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -41,7 +41,7 @@
 
         {{ macros.checkboxGroup(code + '-new-sen', fields, 0, false) }}
 
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
