--- a/app/views/new/start-date.html
+++ b/app/views/new/start-date.html
@@ -15,7 +15,7 @@
     {{ macros.datefields('new-start-date', 'Course start date') }}
 
     <div class="form-group">
-      <input type="submit" class="button" value="Continue" />
+      <input type="submit" class="govuk-button" value="Continue" />
     </div>
   </form>
 </main>
