--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -58,7 +58,7 @@
         {% elseif data[code + '-new-phase'] == 'Secondary' %}
           {{ macros.select(code + '-new-subject', 'Secondary subject', secondaryFields) }}
         {% endif %}
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
