--- a/app/views/no-access.html
+++ b/app/views/no-access.html
@@ -34,7 +34,7 @@
         </fieldset>
         <fieldset>
         {{ macros.textbox('org', 'Your organisation')}}
-        <input type="submit" class="button" value="Request access">
+        <input type="submit" class="govuk-button" value="Request access">
         </fieldset>
       </form> -->
     </div>
