--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -165,7 +165,7 @@
   {% endif %}
 
   <p class="add-top-margin">
-    <a href="/new/start" class="button">Add a new course</a>
+    <a href="/new/start" class="govuk-button">Add a new course</a>
   </p>
 
   <h2 class="govuk-heading-l">Request access for someone</h2>
