--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -26,14 +26,14 @@
     <dd>
       <details role="group">
         {% if 'PGCE' in course.options[0] %}
-          <summary style="margin-bottom: 0;" role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">PGCE with QTS</span></summary>
+          <summary style="margin-bottom: 0;" role="govuk-button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">PGCE with QTS</span></summary>
 
           <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
               <p>A postgraduate certificate in education (PGCE) with qualified teacher status (QTS) allows you to teach in England, Scotland, Wales and Northern Ireland. It’s also recognised internationally.</p>
               <p>Many PGCE courses include credits that count toward a Master’s degree.</p>
           </div>
         {% else %}
-          <summary style="margin-bottom: 0;" role="button" aria-controls="details-content-0" aria-expanded="true"><span class="summary">QTS</span></summary>
+          <summary style="margin-bottom: 0;" role="govuk-button" aria-controls="details-content-0" aria-expanded="true"><span class="summary">QTS</span></summary>
 
           <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="false">
               <p>Qualified teacher status (QTS) allows you to teach in state schools in England.</p>
