--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -55,7 +55,7 @@
 
         {{ macros.textbox('request-organisation', 'Their organisation') }}
         {{ macros.textareaBasic('request-reason', 'Reason they need access', 2) }}
-        <input type="submit" class="button" value="Request access">
+        <input type="submit" class="govuk-button" value="Request access">
       </form>
     </div>
   </div>
