--- a/app/views/school-autocomplete.html
+++ b/app/views/school-autocomplete.html
@@ -44,7 +44,7 @@
           <div id="my-autocomplete-container"></div>
         </div>
 
-        <input type="submit" class="button" value="Save" />
+        <input type="submit" class="govuk-button" value="Save" />
       </form>
     </div>
   </div>
