--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -28,7 +28,7 @@
           <input class="form-control" id="password" type="password" name="password">
         </div>
 
-        <input type="submit" class="button" value="Sign in">
+        <input type="submit" class="govuk-button" value="Sign in">
       </form>
     </div>
   </div>
