--- a/app/views/time-spent-where.html
+++ b/app/views/time-spent-where.html
@@ -23,7 +23,7 @@
 
         {{ macros.textbox('placement-school-days', 'Days spent at placement school(s)')}}
 
-        <input type="submit" class="button" value="Save">
+        <input type="submit" class="govuk-button" value="Save">
       </form>
     </div>
   </div>
