--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -113,7 +113,7 @@
         {{ macros.textarea(course.programmeCode + '-placement-school-policy', 'How school placements work', 10, '', 350, errors) }}
 
         <div class="add-double-bottom-margin">
-          <input type="submit" class="button" value="Save" />
+          <input type="submit" class="govuk-button" value="Save" />
         </div>
 
         <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a>
