--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -94,7 +94,7 @@
       <form action="/" method="post">
 
         <div class="add-double-bottom-margin">
-          <input type="submit" class="button" value="Publish changes" />
+          <input type="submit" class="govuk-button" value="Publish changes" />
         </div>
 
         <p><a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}">Cancel changes</a></p>
