--- a/app/views/edit-location.html
+++ b/app/views/edit-location.html
@@ -32,7 +32,7 @@
         {{ macros.textbox('website', 'Website')}}
 
         <div class="form-group">
-          <input type="submit" class="button" value="Save">
+          <input type="submit" class="govuk-button" value="Save">
         </div>
 
         <div class="form-group">
