--- a/app/views/new/accredited-provider.html
+++ b/app/views/new/accredited-provider.html
@@ -59,7 +59,7 @@
 
         {{ macros.radioGroup(code + '-new-has-accredited-provider', fields, errors) }}
 
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
