--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -232,7 +232,7 @@
       </div>
     </div>
     <div class="form-group" style="margin-top: 30px">
-      <input type="submit" class="button" value="Save new course" />
+      <input type="submit" class="govuk-button" value="Save new course" />
     </div>
     <p>Saving this course will not publish it.</p>
   </form>
