--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -42,7 +42,7 @@
           }
         ]) }}
 
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
