--- a/app/views/new/training-locations.html
+++ b/app/views/new/training-locations.html
@@ -34,7 +34,7 @@
         {% else %}
           {{ macros.checkboxGroup(code + '-new-locations', locations) }}
         {% endif %}
-        <input type="submit" class="button" value="Continue" />
+        <input type="submit" class="govuk-button" value="Continue" />
       </form>
     </div>
   </div>
