--- a/app/views/we-imported.html
+++ b/app/views/we-imported.html
@@ -20,7 +20,7 @@
       <p class="add-double-bottom-margin">To add courses or change factual course information you’ll need to continue to use UCAS web-link. Your changes on UCAS will be automatically imported here and we’ll let you know when they’re ready.</p>
 
       <div class="form-group">
-        <a href="/courses" class="button">Continue</a>
+        <a href="/courses" class="govuk-button">Continue</a>
       </div>
     </div>
   </div>
