--- a/app/views/your-organisation.html
+++ b/app/views/your-organisation.html
@@ -34,7 +34,7 @@
         {{ macros.textbox('website', 'Website')}}
 
         <div class="form-group">
-          <input type="submit" class="button" value="Save">
+          <input type="submit" class="govuk-button" value="Save">
         </div>
 
         <div class="form-group">
