Move phase banner into main template

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -45,6 +45,15 @@
   }) }}
 {% endblock %}
 
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "prototype"
+    },
+    html: 'This is a prototype of a new service. Some parts of this prototype do not work yet.'
+  }) }}
+{% endblock %}
+
 {% if useAutoStoreData %}
   {% block footer %}
     {{ govukFooter({
