Create an afterPhaseBanner block for back links and breadcrumbs

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -52,6 +52,8 @@
     },
     html: 'This is a prototype of a new service. Some parts of this prototype do not work yet.'
   }) }}
+
+  {% block afterPhaseBanner %}{% endblock %}
 {% endblock %}
 
 {% if useAutoStoreData %}
