Update back link classes

--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -83,7 +83,7 @@
 {% endif %}
 
 
-  <a href="/" class="link-back">Back</a>
+  <a href="/" class="govuk-back-link">Back</a>
 
   {% if showErrors and errors %}
     <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
