--- a/app/views/edit-location.html
+++ b/app/views/edit-location.html
@@ -7,7 +7,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <a href="/school/{{ school.id }}" class="link-back">Back</a>
+      <a href="/school/{{ school.id }}" class="govuk-back-link">Back</a>
 
       <form action="/organisation" method="post">
         <legend>
