--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="{{ paths.back }}" class="link-back">Back</a>
+  <a href="{{ paths.back }}" class="govuk-back-link">Back</a>
 
   <!-- examples:
       1: https://find-postgraduate-teacher-training.education.gov.uk/course/17B/225K
