--- a/app/views/new/phase.html
+++ b/app/views/new/phase.html
@@ -3,7 +3,7 @@
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block afterPhaseBanner %}
-  <a href="{{ paths.back }}" class="link-back">Back</a>
+  <a href="{{ paths.back }}" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
