--- a/app/views/new/start-date.html
+++ b/app/views/new/start-date.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="/new/outcome" class="link-back">Back</a>
+  <a href="/new/outcome" class="govuk-back-link">Back</a>
 
   <h1 class="govuk-heading-xl">
     {{ title }}
