--- a/app/views/preview-organisation-information.html
+++ b/app/views/preview-organisation-information.html
@@ -6,7 +6,7 @@
 
 
 
-  <a href="/about-your-organisation" class="link-back">Back to organisation information</a>
+  <a href="/about-your-organisation" class="govuk-back-link">Back to organisation information</a>
 
   <div class="status-box add-top-margin">
     <p>This is a preview of your organisation information. It will display at the bottom of each course.</p>
