--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<a href="/about-your-organisation" class="link-back">Back</a>
+<a href="/about-your-organisation" class="govuk-back-link">Back</a>
 
 {% include "about-your-organisation/_errors.html" %}
 
