--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="link-back">Back</a>
+  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-back-link">Back</a>
 
   {% include "course/_errors.html" %}
 
