--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="link-back">Back</a>
+  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-back-link">Back</a>
 
   <h1 class="govuk-heading-xl">
     <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
