--- a/app/views/course/vacancies-full-part.html
+++ b/app/views/course/vacancies-full-part.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="/" class="link-back">Back</a>
+  <a href="/" class="govuk-back-link">Back</a>
 
   <h1 class="govuk-heading-xl">
     <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
