--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="{{ paths.back }}" class="link-back">Back</a>
+  <a href="{{ paths.back }}" class="govuk-back-link">Back</a>
 
   <form action="{{ paths.next }}" method="post">
     <div class="grid-row">
