--- a/app/views/new/duration.html
+++ b/app/views/new/duration.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-  <a href="/new/qualifications" class="link-back">Back</a>
+  <a href="/new/qualifications" class="govuk-back-link">Back</a>
 
   <h1 class="govuk-heading-xl">
     {{ title }}
