--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -5,7 +5,7 @@
 
 
 
-  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="link-back">Back to course</a>
+  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-back-link">Back to course</a>
 
   <div class="status-box add-top-margin">
     This is a preview of a course: {{ course.name }} ({{ course.programmeCode }}).
