--- a/app/views/your-organisation.html
+++ b/app/views/your-organisation.html
@@ -7,7 +7,7 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <a href="/organisation" class="link-back">Back</a>
+      <a href="/organisation" class="govuk-back-link">Back</a>
 
       <form action="/organisation" method="post">
         <legend>
